# policy-rag-eval-service

./: README.md  main.py  pyproject.toml
config/: app.ini
src/policy_rag_eval/: config.py  main.py
src/policy_rag_eval/api/: deps.py
src/policy_rag_eval/api/routes/: query.py  runs.py
src/policy_rag_eval/graph/: graph.py  nodes.py  state.py
src/policy_rag_eval/llm/: base.py  openai.py
src/policy_rag_eval/models/: event.py  query.py  run.py
src/policy_rag_eval/retrieval/: __init__.py  cache.py  chunking.py  finma.py  index.py  loaders.py  retriever.py
src/policy_rag_eval/retrieval/model/: types.py
src/policy_rag_eval/stores/: events.py  runs.py
src/policy_rag_eval/workflows/: runner.py
tests/: conftest.py  test_events.py  test_finma_search.py  test_graph_flow.py  test_health.py  test_query_finma.py  test_runs.py
tests/fixtures/: finma.txt  hotpot_dev_distractor_v1.json  sample.txt
